# run-farm

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml
docs/: DESIGN.md  RELEASING.md
examples/: local_campaign.py
src/run_farm/: __init__.py  budget.py  config.py  driver.py  farm.py  fleet.py  ledger.py  local_exec.py  modal_exec.py  multi.py  protocols.py  provider_exec.py  reap.py  reference.py  remote.py  runpod.py  status.py  store.py  sweep.py  testing.py  vast.py  worker.py
tests/: test_admission.py  test_budget.py  test_config.py  test_farm.py  test_fleet.py  test_local_exec.py  test_multi.py  test_provider_exec.py  test_reap.py  test_remote.py  test_runpod_provider.py  test_store.py  test_sweep.py  test_testing.py  test_vast_client.py  test_vast_ledger.py  test_worker.py
